--- a/README.mkd
+++ b/README.mkd
@@ -1,4 +1,4 @@
-Test_20000_rows)data.sql
+Test_20000_rows_data.sql
 1. create 20,000 rows data table
 2. make the procedure and function for this
 3. add index
